crates/zenith/tests/snapshots/screens__session_disconnected__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys






   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
 › /ping
    closed   solar.ping: the connection ended before SOLAR answered
    error   SOLAR exited with code 101 after 3m connected, with 1 call still
            waiting.
            Its last words are below and the Log tab has the rest. Ctrl+R
            starts it again.
              thread 'main' panicked at
            crates/solar-core/src/dispatch.rs:120:9:
              the dispatcher was told to fall over
┌──────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                               │
└──────────────────────────────────────────────────────────────────────────────┘
 ──○── SOLAR disconnected · exited with code 101 ─── Ctrl+R reconnect ─────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 7:  3-3   #8C4907 on #F5F1E8
11:  0-7   #8C4907 on #F5F1E8
12:  3-10  #8C4907 on #F5F1E8 bold reversed
12: 13-22  #8C4907 on #F5F1E8
13:  3-9   #8C4907 on #F5F1E8 bold reversed
13: 12-75  #8C4907 on #F5F1E8 bold
14: 12-19  #8C4907 on #F5F1E8 bold
20:  0-79  #868482 on #F5F1E8
21:  0-0   #868482 on #F5F1E8
21:  1-3   #8C4907 on #F5F1E8
21:  4-47  #555355 on #F5F1E8
21: 79-79  #868482 on #F5F1E8
22:  0-79  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8 bold
23:  4-6   #868482 on #F5F1E8
23:  7-24  #8C4907 on #F5F1E8 bold
23: 25-27  #555355 on #F5F1E8
23: 48-52  #868482 on #F5F1E8
23: 53-58  #8C4907 on #F5F1E8 bold
23: 59-68  #555355 on #F5F1E8
23: 69-79  #868482 on #F5F1E8
