crates/zenith/tests/snapshots/screens__session_disconnected__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys
   ################   The central API of the Constellation
   ################   NIPS-CERN
              ####'   0.1.0
    '############'
      ''######''

   - Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5
     APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every
     key.
 > /ping
    closed   solar.ping: the connection ended before SOLAR answered
    error   SOLAR exited with code 101 after 3m connected, with 1 call still
            waiting.
            Its last words are below and the Log tab has the rest. Ctrl+R
            starts it again.
              thread 'main' panicked at
            crates/solar-core/src/dispatch.rs:120:9:
              the dispatcher was told to fall over
+------------------------------------------------------------------------------+
| > Type / for the commands, or ? for every key.                               |
+------------------------------------------------------------------------------+
 --o-- SOLAR disconnected - exited with code 101 --- Ctrl+R reconnect ---------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 10-18  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 7:  3-3   - on - bold
11:  0-7   - on - bold
12:  3-10  - on - bold reversed
12: 13-22  - on - bold
13:  3-9   - on - bold reversed
13: 12-75  - on - bold
14: 12-19  - on - bold
20:  0-79  - on - dim
21:  0-0   - on - dim
21:  1-3   - on - bold
21: 79-79  - on - dim
22:  0-79  - on - dim
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-24  - on - bold
23: 48-52  - on - dim
23: 53-58  - on - bold
23: 69-79  - on - dim
